--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,35 +1,6 @@
-/* body {
-  background-color: brown;
-  color: blue;
-} */
 
-/* .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-grow: 1;
-  border: 10 px solid firebrick
-  
-} 
 
-.header {
-  border-width: 5 px;
-  border-color: black;
-  border: 10 px solid firebrick;
-}
-
-.center {
-flex-grow: 1;
-align-self: center;
-border: 10 px solid firebrick
-}
-
-.footer {
-  border: 10 px solid firebrick
-} */
- 
- 
- /* #root {
+#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -40,19 +11,6 @@ border: 10 px solid firebrick
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-}
-
-.header {
-  position: sticky;
-  top: 0;
-  padding: 15px 5px;
-  background-color: pink
-}
-
-.footer {
-  padding: 15px 5px;
-  background-color: pink;
-  margin-top: auto;
 }
 
 .logo {
@@ -89,4 +47,4 @@ border: 10 px solid firebrick
 
 .read-the-docs {
   color: #888;
-}  */
+} 
