--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
+  /* height: 100vh;  */
   margin: auto;
 }
 
