--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
 }
 
 html {
-  font-size: 22px;
+  /* font-size: 15px; */
 }
 
 body {
@@ -33,9 +33,13 @@ body {
 header {
   padding: 0 0.25em;
   color: aliceblue;
-  align-items: center;
-  border: slategrey solid 3px;
   width: 100%;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .main {
@@ -54,11 +58,11 @@ footer {
   padding: 0.25em;
   color: aliceblue;
   display: flex;
-  border: slategrey solid 3px;
 }
 
 .footer-links {
   display: flex;
+  justify-content: center;
 
 }
 
@@ -72,23 +76,6 @@ footer {
 .footer-links {
 margin: 10px;
 padding: 10px;
-}
-
-.social-logos {
-  margin: 10px;
-  padding: 10px;
-}
-
-.copyright {
-  margin: 10px;
-  padding: 10px;
-} 
-
-.btn {
-  margin-left: 30px;
-  margin-top: 5px;
-  padding: 5px;
-  display: flex;
 }
 
 .m-0 {
@@ -120,14 +107,11 @@ padding: 10px;
 
 .flex-item span {
   margin: auto;
-  font-size: 25px;
   padding: 10px;
 }
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -140,10 +124,10 @@ padding: 10px;
 }
 
 a {
-  font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -156,17 +140,10 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
