--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh; 
+  /* this will change the height of the page */
   margin: auto;
 }
 
