--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,13 @@
   /* border: 2px solid greenyellow; */
 }
 
-html {
-  /* font-size: 15px; */
+.headerName {
+  border-radius: 20px;
+  background: #363535;
+  box-shadow: 
+  inset 10px 10px 7px #333333,
+  inset -10px -10px 7px #282828;
+
 }
 
 body {
@@ -42,23 +47,30 @@ nav {
   justify-content: flex-end;
 }
 
+go
 .main {
   width: 100%;
   height: 80%;
   display: flex;
   color: white;
-  /* flex-direction: column; */
-  /* justify-content: center; */
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   /* border: slategrey solid 10px; */
 }
 
-.homepagelayout {
+.homepageLayout {
   display: flex;
   flex-direction: row;
 }
 
-.contactForm {
+.leftColumn, .rightColumn {
+  display: flex;
+  justify-content: flex-start;
+  padding: 50px;
+}
+
+.contactForm, .signUpForm, .logInForm {
   display: flex;
   flex-direction: column;
   align-items: center;
