--- a/client/src/index.css
+++ b/client/src/index.css
@@ -185,6 +185,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.text-underline {
+  text-decoration: underline;
+  text-decoration-thickness: 2px; 
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
