--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   text-align: center;
 }
@@ -9,7 +9,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .logo {
