--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,10 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  /* margin: 0; */
+  /* padding: 0; */
+  /* box-sizing: border-box; */
   background-color: #242424;
   color: #595ec1;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* border: 2px solid greenyellow; */
 }
 
@@ -18,7 +18,7 @@
 }
 
 body {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -27,16 +27,16 @@ body {
 }
 
 .App {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
+  /* height: 100vh;  */
   margin: auto;
 }
 
 header {
-  padding: 0 0.25em;
+  /* padding: 0 0.25em; */
   color: aliceblue;
   width: 100%;
 }
@@ -47,10 +47,9 @@ nav {
   justify-content: flex-end;
 }
 
-go
 .main {
-  width: 100%;
-  height: 80%;
+  /* width: 100%;
+  height: 80%; */
   display: flex;
   color: white;
   flex-direction: column;
@@ -133,10 +132,10 @@ padding: 10px;
 }
 
 
-.flex-item span {
+/* .flex-item span {
   margin: auto;
   padding: 10px;
-}
+} */
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -164,8 +163,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-width: 320px;
+  min-height: 100vh; */
 }
 
 button {
