--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,15 +68,53 @@ main {
   min-height: 65vh;
 }
 
+.frontPics {
+  height: 300px;
+  width: 300px;
+  border-radius: 7em;
+  box-shadow:  
+  7px 7px 10px #595ec1,
+  -1px -1px 10px #212346;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 0.4em;
+  background-color: #171717;
+  border-radius: 25px;
+  transition: .4s ease-in-out;
+}
+
 .homepageLayout {
   display: flex;
   flex-direction: row;
 }
 
 .leftColumn, .rightColumn {
-  display: flex;
-  justify-content: flex-start;
-  padding: 50px;
+  border-radius: .5em;
+  margin: 10px;
+  background-color: #202020;
+  box-shadow: inset 0px 0px 50px 10px rgba(22, 22, 22, 0.6);
+  /* display: flex; */
+  flex-direction: row;
+  /* justify-content: flex-start; */
+  padding: 25px;
+  font-size: 20px;
+}
+
+.LCText, .RCText {
+  border-radius: 2em;
+  padding-top: 30px;
+  margin: .0px;
+  background-color: #202020;
+}
+
+.LCLink, .RCLink {
+  /* padding-top: 10px; */
 }
 
 .contactForm, .signUpForm, .logInForm {
@@ -170,7 +208,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 30px;
   /* display: flex; */
   place-items: center;
   /* min-width: 320px;
