--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,7 @@ body {
   justify-content: center;
 }
 
-.card mb-3 {
+.cards {
   padding: 10px;
 }
 
@@ -88,7 +88,7 @@ form {
   flex-direction: row;
 }
 
-.leftColumn, .rightColumn {
+.leftColumn, .rightColumn, .cards {
   border: solid #191919;
   border-radius: .5em;
   margin: 20px;
