--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 * {
-  background-color: #242424;
+  /* background-color: #242424; */
   color: #595ec1;
   /* border: 2px solid greenyellow; */
 }
@@ -18,6 +18,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+div {
+  background-color: var(--background-color);
 }
 
 .my-5 {
