--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,11 @@
 * {
-  background-color: #242424;
   color: #595ec1;
   /* border: 2px solid greenyellow; */
+}
+
+div
+{
+  background-color: var(--background-color);
 }
 
 .headerLink {
